@@ -1,5 +1,8 @@
 2020-04-07  Jakub Jelinek  <jakub@redhat.com>
 
+	PR target/94488
+	* gcc.c-torture/compile/pr94488.c: New test.
+
 	Backported from mainline
 	2020-04-04  Hannes Domani  <ssbssa@yahoo.de>
 		    Jakub Jelinek  <jakub@redhat.com>
